# yt-download

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  shrimp-rules.md
.github/workflows/: uv-ci.yml
.kiro/specs/youtube-downloader-renewal/: requirements.md
docs/: PRD.md
scripts/: run_docker.sh  run_local_mac.sh  run_local_win.ps1  serve_uv.sh
server/: app.py
web/: index.html
