[project]
name = "yt-download"
version = "0.1.0"
description = "Local YouTube downloader (yt-dlp + FastAPI)"
readme = "README.md"
requires-python = ">=3.10,<3.14"
authors = [{ name = "local" }]
dependencies = [
  "fastapi==0.111.0",
  "uvicorn[standard]==0.30.1",
  "yt-dlp==2025.8.11",
]

[project.scripts]
serve = "uvicorn:main"

[tool.uv]
package = true

[tool.uv.sources]

[tool.uv.workspace]
members = ["."]


